# lumio

backend/: .env  .env.example  .gitignore  Taskfile.yml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0a5529df0679_updated_the_relat.py  0bbc7389bf75_added_the_product_image_and_updated_the_.py  2cb2c4f814c6_added_the_cart_and_cart_items.py  725ab225793d_add_product_model.py  7b320c6d6e7a_added_the_address.py  7db978d24fcb_updated_the_cart_and_cart_items.py  810fcfa91275_fixed_the_category.py  a54849fafe31_added_the_primary_models.py  a619b8127f1c_updated_the_cart_item.py  ecaa56660973_up.py
backend/api/: __init__.py
backend/api/v1/: __init__.py
backend/api/v1/address/: __init__.py  route.py
backend/api/v1/ai/: __init__.py  route.py
backend/api/v1/cart/: __init__.py  route.py
backend/api/v1/cart_items/: __init__.py  route.py
backend/api/v1/category/: __init__.py  category.py
backend/api/v1/products/: __init__.py  route.py
backend/api/v1/upload/: __init__.py  route.py
backend/core/: config.py
backend/core/database/: __init__.py  base.py
backend/core/database/mixins/: __init__.py  time_stamp_mixin.py
backend/core/dependencies/: __init__.py  authentication.py  session.py  supabase.py
backend/core/models/: __init__.py  address.py  cart.py  cart_items.py  category.py  product.py  product_image.py
backend/core/schemas/: address.py  cart.py  cart_items.py  category.py  product.py  product_image.py
backend/services/: __init__.py  hf_service.py  supabase_service.py
backend/utils/: jwt_handler.py
frontend/: .env  (+2 more)
(+131 files in other folders)
